// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TestReviewLayout > hides menu button based on the theme 1`] = `
<div
  class="headerbar"
>
  <header>
     
     
    <div
      class="content"
    >
      <div
        class="header-bar-content"
      >
        <div
          class="header-label"
        >
          Review
        </div>
         
        <div
          class="header-title"
        />
      </div>
       
      <div
        class="floating-toolbars-wrapper"
      >
        <div
          class="floating-toolbars"
        >
          
           
          <div
            class="flex-break"
          />
          
          
           
          <div
            class="flex-break"
          />
          
          
           
          
        </div>
      </div>
    </div>
  </header>
   
  <aside>
    <ol
      class="end"
    >
       
    </ol>
     
  </aside>
</div>
`;

exports[`TestReviewLayout > if waitingForExternalScore, renders inline notification on answer tab 1`] = `
<div
  class="qti-item-container"
>
  <div
    class="tabgroup"
  >
     
    <div
      class="scrollbox"
    >
      <ul
        role="tablist"
      >
        <li
          role="presentation"
        >
          <button
            aria-current="false"
            aria-selected="false"
            role="tab"
          >
             
            Question
             
          </button>
           
        </li>
        <li
          role="presentation"
        >
          <button
            aria-current="true"
            aria-selected="true"
            role="tab"
          >
             
            <span>
              Answer
            </span>
             
            <span
              class="tablabel-waiting"
            >
              ( - / - )
            </span>
            
             
          </button>
           
        </li>
        <li
          role="presentation"
        >
          <button
            aria-current="false"
            aria-selected="false"
            role="tab"
          >
             
            Correct
             
          </button>
           
        </li>
      </ul>
      <iframe
        aria-hidden="true"
        src="about:blank"
        style="display: block; position: absolute; top: 0; left: 0; width: 100%; height: 100%; overflow: hidden; border: 0; opacity: 0; pointer-events: none; z-index: -1;"
        tabindex="-1"
      />
    </div>
     
  </div>
   
   
  <div
    class="inline-notification"
  >
    <div
      class="notification-wrapper button-fill neutral"
    >
      <svg
        aria-hidden="true"
        class="icon medium"
        viewBox="0 0 16 16"
      >
        <title>
          Info icon
        </title>
        <path
          d="M11.31 14.25l-.22.91-1.6.6A4.19 4.19 0 018.1 16a2.8 2.8 0 01-1.89-.59 2 2 0 01-.67-1.51 6.09 6.09 0 010-.72c0-.25.09-.52.16-.83l.84-3c.07-.28.14-.55.19-.8a3.68 3.68 0 00.07-.7 1.07 1.07 0 00-.23-.79 1.37 1.37 0 00-.89-.22 2.65 2.65 0 00-.67.1l-.58.19.22-.91c.55-.22 1.07-.41 1.57-.57a4.65 4.65 0 011.42-.24A2.71 2.71 0 019.55 6a1.9 1.9 0 01.65 1.51v.68a4.68 4.68 0 01-.17.89L9.16 12a7 7 0 00-.18.81 3.7 3.7 0 00-.08.69 1 1 0 00.26.8 1.48 1.48 0 00.91.21 2.54 2.54 0 00.68-.1 3.85 3.85 0 00.56-.19m.21-12.36a1.72 1.72 0 01-.58 1.31 2 2 0 01-1.4.54 2 2 0 01-1.41-.51 1.73 1.73 0 01-.59-1.31A1.73 1.73 0 018.13.58 2 2 0 019.54 0a2 2 0 011.4.55 1.72 1.72 0 01.58 1.31"
          fill-rule="evenodd"
        />
      </svg>
       
      <div
        aria-live="assertive"
        class="notification-content"
      >
        <div
          class="notification-text"
        >
          <span
            class="notification-heading ui-heading"
          >
            Awaiting manual scoring
          </span>
           
          <span
            class="notification-body"
          >
            All or part of this question needs to be manually scored. Please check back later to view the score.
          </span>
          
        </div>
         
      </div>
       
    </div>
  </div>
   
  <div
    class="item-content-container"
  />
</div>
`;

exports[`TestReviewLayout > mounts with the main areas 1`] = `
{
  "content": <div
    class="item-content-container"
  />,
  "header": <div
    class="header-title"
  />,
  "jumpMenu": <div />,
  "main": <main
    aria-labelledby="a11y-main"
    id="test-main"
    role="main"
    tabindex="0"
  >
    <div
      class="scroll-first-child"
    />
     
    <h2
      class="visually-hidden"
      id="a11y-main"
      tabindex="-1"
    />
     
    <div
      class="qti-item-container"
    >
      <div
        class="tabgroup"
      >
         
        <div
          class="scrollbox"
        >
          <ul
            role="tablist"
          >
            <li
              role="presentation"
            >
              <button
                aria-current="true"
                aria-selected="true"
                role="tab"
              >
                 
                Question
                 
              </button>
               
            </li>
          </ul>
          <iframe
            aria-hidden="true"
            src="about:blank"
            style="display: block; position: absolute; top: 0; left: 0; width: 100%; height: 100%; overflow: hidden; border: 0; opacity: 0; pointer-events: none; z-index: -1;"
            tabindex="-1"
          />
        </div>
         
      </div>
       
       
       
      <div
        class="item-content-container"
      />
    </div>
     
    <div
      class="transition-wrapper"
    />
     
    <div
      class="scroll-last-child"
    />
  </main>,
  "navigation": <nav
    aria-hidden="true"
    class="bottom-bar"
    id="test-navigation"
  >
    <h2
      class="visually-hidden"
    >
      Test Navigation
    </h2>
  </nav>,
  "overlayContent": <div
    slot="content"
  />,
  "overlayFooter": <div
    slot="footer"
  />,
  "overlayHeader": <div
    slot="header"
  />,
  "panel": <div
    class="panel-content"
  />,
  "testRunner": <div
    class="test-runner use-a11y-text-styles interacting"
    style="--window-height: 767px;"
  >
    <div />
     
    <div
      class="top-bar"
      id="test-top-bar"
    >
      <div>
        <div
          class="headerbar"
        >
          <header>
            <ol
              class="start"
            >
              <li>
                <button
                  aria-controls="tao-panel-123"
                  aria-expanded="false"
                  aria-haspopup="true"
                  aria-label="Main menu"
                  class="icon-bar-btn actionable base-24 default"
                  data-test-id="mainmenu"
                  title="Main menu"
                >
                  <svg
                    aria-hidden="true"
                    class="icon large"
                    viewBox="0 0 24 24"
                  >
                    <title>
                      Menu icon
                    </title>
                    <path
                      d="M0 2h24v3H0zm0 8h24v3H0zm0 8h24v3H0z"
                    />
                  </svg>
                   
                   
                </button>
                 
              </li>
            </ol>
             
             
            <div
              class="content"
            >
              <div
                class="header-bar-content"
              >
                <div
                  class="header-label"
                >
                  Review
                </div>
                 
                <div
                  class="header-title"
                />
              </div>
               
              <div
                class="floating-toolbars-wrapper"
              >
                <div
                  class="floating-toolbars"
                >
                  
                   
                  <div
                    class="flex-break"
                  />
                  
                  
                   
                  <div
                    class="flex-break"
                  />
                  
                  
                   
                  
                </div>
              </div>
            </div>
          </header>
           
          <aside>
            <ol
              class="end"
            >
               
            </ol>
             
          </aside>
        </div>
      </div>
    </div>
     
    <main
      aria-labelledby="a11y-main"
      id="test-main"
      role="main"
      tabindex="0"
    >
      <div
        class="scroll-first-child"
      />
       
      <h2
        class="visually-hidden"
        id="a11y-main"
        tabindex="-1"
      />
       
      <div
        class="qti-item-container"
      >
        <div
          class="tabgroup"
        >
           
          <div
            class="scrollbox"
          >
            <ul
              role="tablist"
            >
              <li
                role="presentation"
              >
                <button
                  aria-current="true"
                  aria-selected="true"
                  role="tab"
                >
                   
                  Question
                   
                </button>
                 
              </li>
            </ul>
            <iframe
              aria-hidden="true"
              src="about:blank"
              style="display: block; position: absolute; top: 0; left: 0; width: 100%; height: 100%; overflow: hidden; border: 0; opacity: 0; pointer-events: none; z-index: -1;"
              tabindex="-1"
            />
          </div>
           
        </div>
         
         
         
        <div
          class="item-content-container"
        />
      </div>
       
      <div
        class="transition-wrapper"
      />
       
      <div
        class="scroll-last-child"
      />
    </main>
     
    <nav
      aria-hidden="true"
      class="bottom-bar"
      id="test-navigation"
    >
      <h2
        class="visually-hidden"
      >
        Test Navigation
      </h2>
    </nav>
     
    <div
      aria-hidden="true"
      class="overlay"
    >
      <header
        role="none"
      >
        <div
          slot="header"
        />
      </header>
       
      <div
        aria-labelledby="a11y-overlay"
        class="overlay-content"
        role="main"
      >
        <div
          class="scroll-first-child"
        />
         
        <div
          slot="content"
        />
         
        <div
          class="scroll-last-child"
        />
      </div>
       
      <footer>
        <div
          slot="footer"
        />
      </footer>
    </div>
  </div>,
  "tools": <div
    class="floating-toolbars-wrapper"
  >
    <div
      class="floating-toolbars"
    >
      
       
      <div
        class="flex-break"
      />
      
      
       
      <div
        class="flex-break"
      />
      
      
       
      
    </div>
  </div>,
  "topBar": <div
    class="top-bar"
    id="test-top-bar"
  >
    <div>
      <div
        class="headerbar"
      >
        <header>
          <ol
            class="start"
          >
            <li>
              <button
                aria-controls="tao-panel-123"
                aria-expanded="false"
                aria-haspopup="true"
                aria-label="Main menu"
                class="icon-bar-btn actionable base-24 default"
                data-test-id="mainmenu"
                title="Main menu"
              >
                <svg
                  aria-hidden="true"
                  class="icon large"
                  viewBox="0 0 24 24"
                >
                  <title>
                    Menu icon
                  </title>
                  <path
                    d="M0 2h24v3H0zm0 8h24v3H0zm0 8h24v3H0z"
                  />
                </svg>
                 
                 
              </button>
               
            </li>
          </ol>
           
           
          <div
            class="content"
          >
            <div
              class="header-bar-content"
            >
              <div
                class="header-label"
              >
                Review
              </div>
               
              <div
                class="header-title"
              />
            </div>
             
            <div
              class="floating-toolbars-wrapper"
            >
              <div
                class="floating-toolbars"
              >
                
                 
                <div
                  class="flex-break"
                />
                
                
                 
                <div
                  class="flex-break"
                />
                
                
                 
                
              </div>
            </div>
          </div>
        </header>
         
        <aside>
          <ol
            class="end"
          >
             
          </ol>
           
        </aside>
      </div>
    </div>
  </div>,
}
`;

exports[`TestReviewLayout > renders correctly when showResponse: false, showCorrect: false, showQuestion: true 1`] = `
<ul
  role="tablist"
>
  <li
    role="presentation"
  >
    <button
      aria-current="true"
      aria-selected="true"
      role="tab"
    >
       
      Question
       
    </button>
     
  </li>
</ul>
`;

exports[`TestReviewLayout > renders correctly when showResponse: false, showCorrect: true, showQuestion: false 1`] = `
<ul
  role="tablist"
>
  <li
    role="presentation"
  >
    <button
      aria-current="true"
      aria-selected="true"
      role="tab"
    >
       
      Correct
       
    </button>
     
  </li>
</ul>
`;

exports[`TestReviewLayout > renders correctly when showResponse: false, showCorrect: true, showQuestion: true 1`] = `
<ul
  role="tablist"
>
  <li
    role="presentation"
  >
    <button
      aria-current="true"
      aria-selected="true"
      role="tab"
    >
       
      Question
       
    </button>
     
  </li>
  <li
    role="presentation"
  >
    <button
      aria-current="false"
      aria-selected="false"
      role="tab"
    >
       
      Correct
       
    </button>
     
  </li>
</ul>
`;

exports[`TestReviewLayout > renders correctly when showResponse: true, showCorrect: false, showQuestion: false 1`] = `
<ul
  role="tablist"
>
  <li
    role="presentation"
  >
    <button
      aria-current="true"
      aria-selected="true"
      role="tab"
    >
       
      Answer
       
    </button>
     
  </li>
</ul>
`;

exports[`TestReviewLayout > renders correctly when showResponse: true, showCorrect: false, showQuestion: true 1`] = `
<ul
  role="tablist"
>
  <li
    role="presentation"
  >
    <button
      aria-current="false"
      aria-selected="false"
      role="tab"
    >
       
      Question
       
    </button>
     
  </li>
  <li
    role="presentation"
  >
    <button
      aria-current="true"
      aria-selected="true"
      role="tab"
    >
       
      Answer
       
    </button>
     
  </li>
</ul>
`;

exports[`TestReviewLayout > renders correctly when showResponse: true, showCorrect: true, showQuestion: false 1`] = `
<ul
  role="tablist"
>
  <li
    role="presentation"
  >
    <button
      aria-current="true"
      aria-selected="true"
      role="tab"
    >
       
      Answer
       
    </button>
     
  </li>
  <li
    role="presentation"
  >
    <button
      aria-current="false"
      aria-selected="false"
      role="tab"
    >
       
      Correct
       
    </button>
     
  </li>
</ul>
`;

exports[`TestReviewLayout > renders correctly when showResponse: true, showCorrect: true, showQuestion: true 1`] = `
<ul
  role="tablist"
>
  <li
    role="presentation"
  >
    <button
      aria-current="false"
      aria-selected="false"
      role="tab"
    >
       
      Question
       
    </button>
     
  </li>
  <li
    role="presentation"
  >
    <button
      aria-current="true"
      aria-selected="true"
      role="tab"
    >
       
      Answer
       
    </button>
     
  </li>
  <li
    role="presentation"
  >
    <button
      aria-current="false"
      aria-selected="false"
      role="tab"
    >
       
      Correct
       
    </button>
     
  </li>
</ul>
`;

exports[`TestReviewLayout > renders correctly with a serviceCallId 1`] = `
<body>
  <div>
    <div
      class="test-runner use-a11y-text-styles interacting"
      style="--window-height: 767px;"
    >
      <div />
       
      <div
        class="top-bar"
        id="test-top-bar"
      >
        <div>
          <div
            class="headerbar"
          >
            <header>
              <ol
                class="start"
              >
                <li>
                  <button
                    aria-controls="tao-panel-123"
                    aria-expanded="false"
                    aria-haspopup="true"
                    aria-label="Main menu"
                    class="icon-bar-btn actionable base-24 default"
                    data-test-id="mainmenu"
                    title="Main menu"
                  >
                    <svg
                      aria-hidden="true"
                      class="icon large"
                      viewBox="0 0 24 24"
                    >
                      <title>
                        Menu icon
                      </title>
                      <path
                        d="M0 2h24v3H0zm0 8h24v3H0zm0 8h24v3H0z"
                      />
                    </svg>
                     
                     
                  </button>
                   
                </li>
              </ol>
               
               
              <div
                class="content"
              >
                <div
                  class="header-bar-content"
                >
                  <div
                    class="header-label"
                  >
                    Review
                  </div>
                   
                  <div
                    class="header-title"
                  />
                </div>
                 
                <div
                  class="floating-toolbars-wrapper"
                >
                  <div
                    class="floating-toolbars"
                  >
                    
                     
                    <div
                      class="flex-break"
                    />
                    
                    
                     
                    <div
                      class="flex-break"
                    />
                    
                    
                     
                    
                  </div>
                </div>
              </div>
            </header>
             
            <aside>
              <ol
                class="end"
              >
                 
              </ol>
               
            </aside>
          </div>
        </div>
      </div>
       
      <main
        aria-labelledby="a11y-main"
        id="test-main"
        role="main"
        tabindex="0"
      >
        <div
          class="scroll-first-child"
        />
         
        <h2
          class="visually-hidden"
          id="a11y-main"
          tabindex="-1"
        />
         
        <div
          class="qti-item-container"
        >
          <div
            class="tabgroup"
          >
             
            <div
              class="scrollbox"
            >
              <ul
                role="tablist"
              >
                <li
                  role="presentation"
                >
                  <button
                    aria-current="true"
                    aria-selected="true"
                    role="tab"
                  >
                     
                    Question
                     
                  </button>
                   
                </li>
              </ul>
              <iframe
                aria-hidden="true"
                src="about:blank"
                style="display: block; position: absolute; top: 0; left: 0; width: 100%; height: 100%; overflow: hidden; border: 0; opacity: 0; pointer-events: none; z-index: -1;"
                tabindex="-1"
              />
            </div>
             
          </div>
           
           
           
          <div
            class="item-content-container"
          />
        </div>
         
        <div
          class="transition-wrapper"
        />
         
        <div
          class="scroll-last-child"
        />
      </main>
       
      <nav
        aria-hidden="true"
        class="bottom-bar"
        id="test-navigation"
      >
        <h2
          class="visually-hidden"
        >
          Test Navigation
        </h2>
      </nav>
       
      <div
        aria-hidden="true"
        class="overlay"
      >
        <header
          role="none"
        >
          <div
            slot="header"
          />
        </header>
         
        <div
          aria-labelledby="a11y-overlay"
          class="overlay-content"
          role="main"
        >
          <div
            class="scroll-first-child"
          />
           
          <div
            slot="content"
          />
           
          <div
            class="scroll-last-child"
          />
        </div>
         
        <footer>
          <div
            slot="footer"
          />
        </footer>
      </div>
    </div>
     
    <div
      class="panel close-initial inverted-color"
      id="tao-panel-123"
    >
      <div
        class="drawer start inverted"
      >
        <div
          class="header"
        >
          <div
            class="icon-wrapper"
          >
            <button
              aria-label="Close Panel"
              class="icon-bar-btn actionable base-16 inverted"
              title="Close Panel"
            >
              <svg
                aria-hidden="false"
                class="icon medium"
                viewBox="0 0 16 16"
              >
                <title>
                  Remove icon
                </title>
                <path
                  d="M1 0l7 7 7-7 1 1-7 7 7 7-1 1-7-7-7 7-1-1 7-7-7-7 1-1z"
                />
              </svg>
               
               
            </button>
          </div>
           
        </div>
         
        <div
          class="drawer-content"
        >
          <div
            class="panel-content"
          />
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`TestReviewLayout > renders scorer overall comment on answer tab 1`] = `
<div
  class="scorer-comments-overall"
>
  <h6>
    Overall feedback
  </h6>
   
  <pre
    class="content"
  >
    Your answer receives partial credit because you correctly matched 1 planet with its moon.
Second line.
  </pre>
</div>
`;

exports[`TestReviewLayout > renders scores correctly on answer tab (score: 0, maxScore: 2, showScore: false, waitingForExternalScore: true) 1`] = `
<button
  aria-current="true"
  aria-selected="true"
  role="tab"
>
   
  Answer
   
</button>
`;

exports[`TestReviewLayout > renders scores correctly on answer tab (score: 0, maxScore: 2, showScore: true, waitingForExternalScore: true) 1`] = `
<button
  aria-current="true"
  aria-selected="true"
  role="tab"
>
   
  <span>
    Answer
  </span>
   
  <span
    class="tablabel-waiting"
  >
    ( - / - )
  </span>
  
   
</button>
`;

exports[`TestReviewLayout > renders scores correctly on answer tab (score: 0, maxScore: 8, showScore: true, waitingForExternalScore: false) 1`] = `
<button
  aria-current="true"
  aria-selected="true"
  role="tab"
>
   
  <span>
    Answer
  </span>
   
  <span
    class="warning"
  >
    ( 0 / 8 )
  </span>
  
   
</button>
`;

exports[`TestReviewLayout > renders scores correctly on answer tab (score: 1, maxScore: 2, showScore: false, waitingForExternalScore: false) 1`] = `
<button
  aria-current="true"
  aria-selected="true"
  role="tab"
>
   
  Answer
   
</button>
`;

exports[`TestReviewLayout > renders scores correctly on answer tab (score: 1, maxScore: 2, showScore: true, waitingForExternalScore: false) 1`] = `
<button
  aria-current="true"
  aria-selected="true"
  role="tab"
>
   
  <span>
    Answer
  </span>
   
  <span
    class="tablabel-partial"
  >
    ( 1 / 2 )
  </span>
  
   
</button>
`;

exports[`TestReviewLayout > renders scores correctly on answer tab (score: 4, maxScore: 0, showScore: true, waitingForExternalScore: false) 1`] = `
<button
  aria-current="true"
  aria-selected="true"
  role="tab"
>
   
  Answer
   
</button>
`;

exports[`TestReviewLayout > updates based on the test runner status 1`] = `
<body>
  <div>
    <div
      class="test-runner use-a11y-text-styles interacting"
      style="--window-height: 767px;"
    >
      <div />
       
      <div
        class="top-bar"
        id="test-top-bar"
      >
        <div>
          <div
            class="headerbar"
          >
            <header>
              <ol
                class="start"
              >
                <li>
                  <button
                    aria-controls="tao-panel-123"
                    aria-expanded="false"
                    aria-haspopup="true"
                    aria-label="Main menu"
                    class="icon-bar-btn actionable base-24 default"
                    data-test-id="mainmenu"
                    title="Main menu"
                  >
                    <svg
                      aria-hidden="true"
                      class="icon large"
                      viewBox="0 0 24 24"
                    >
                      <title>
                        Menu icon
                      </title>
                      <path
                        d="M0 2h24v3H0zm0 8h24v3H0zm0 8h24v3H0z"
                      />
                    </svg>
                     
                     
                  </button>
                   
                </li>
              </ol>
               
               
              <div
                class="content"
              >
                <div
                  class="header-bar-content"
                >
                  <div
                    class="header-label"
                  >
                    Review
                  </div>
                   
                  <div
                    class="header-title"
                  />
                </div>
                 
                <div
                  class="floating-toolbars-wrapper"
                >
                  <div
                    class="floating-toolbars"
                  >
                    
                     
                    <div
                      class="flex-break"
                    />
                    
                    
                     
                    <div
                      class="flex-break"
                    />
                    
                    
                     
                    
                  </div>
                </div>
              </div>
            </header>
             
            <aside>
              <ol
                class="end"
              >
                 
              </ol>
               
            </aside>
          </div>
        </div>
      </div>
       
      <main
        aria-labelledby="a11y-main"
        id="test-main"
        role="main"
        tabindex="0"
      >
        <div
          class="scroll-first-child"
        />
         
        <h2
          class="visually-hidden"
          id="a11y-main"
          tabindex="-1"
        />
         
        <div
          class="qti-item-container"
        >
          <div
            class="tabgroup"
          >
             
            <div
              class="scrollbox"
            >
              <ul
                role="tablist"
              >
                <li
                  role="presentation"
                >
                  <button
                    aria-current="true"
                    aria-selected="true"
                    role="tab"
                  >
                     
                    Question
                     
                  </button>
                   
                </li>
              </ul>
              <iframe
                aria-hidden="true"
                src="about:blank"
                style="display: block; position: absolute; top: 0; left: 0; width: 100%; height: 100%; overflow: hidden; border: 0; opacity: 0; pointer-events: none; z-index: -1;"
                tabindex="-1"
              />
            </div>
             
          </div>
           
           
           
          <div
            class="item-content-container"
          />
        </div>
         
        <div
          class="transition-wrapper"
        />
         
        <div
          class="scroll-last-child"
        />
      </main>
       
      <nav
        aria-hidden="true"
        class="bottom-bar"
        id="test-navigation"
      >
        <h2
          class="visually-hidden"
        >
          Test Navigation
        </h2>
      </nav>
       
      <div
        aria-hidden="true"
        class="overlay"
      >
        <header
          role="none"
        >
          <div
            slot="header"
          />
        </header>
         
        <div
          aria-labelledby="a11y-overlay"
          class="overlay-content"
          role="main"
        >
          <div
            class="scroll-first-child"
          />
           
          <div
            slot="content"
          />
           
          <div
            class="scroll-last-child"
          />
        </div>
         
        <footer>
          <div
            slot="footer"
          />
        </footer>
      </div>
    </div>
     
    <div
      class="panel close-initial inverted-color"
      id="tao-panel-123"
    >
      <div
        class="drawer start inverted"
      >
        <div
          class="header"
        >
          <div
            class="icon-wrapper"
          >
            <button
              aria-label="Close Panel"
              class="icon-bar-btn actionable base-16 inverted"
              title="Close Panel"
            >
              <svg
                aria-hidden="false"
                class="icon medium"
                viewBox="0 0 16 16"
              >
                <title>
                  Remove icon
                </title>
                <path
                  d="M1 0l7 7 7-7 1 1-7 7 7 7-1 1-7-7-7 7-1-1 7-7-7-7 1-1z"
                />
              </svg>
               
               
            </button>
          </div>
           
        </div>
         
        <div
          class="drawer-content"
        >
          <div
            class="panel-content"
          />
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`TestReviewLayout > updates based on the test runner status 2`] = `
<body>
  <div>
    <div
      class="test-runner use-a11y-text-styles loading"
      style="--window-height: 767px;"
    >
      <div />
       
      <div
        class="top-bar"
        id="test-top-bar"
      >
        <div>
          <div
            class="headerbar"
          >
            <header>
              <ol
                class="start"
              >
                <li>
                  <button
                    aria-controls="tao-panel-123"
                    aria-expanded="false"
                    aria-haspopup="true"
                    aria-label="Main menu"
                    class="icon-bar-btn actionable base-24 default"
                    data-test-id="mainmenu"
                    title="Main menu"
                  >
                    <svg
                      aria-hidden="true"
                      class="icon large"
                      viewBox="0 0 24 24"
                    >
                      <title>
                        Menu icon
                      </title>
                      <path
                        d="M0 2h24v3H0zm0 8h24v3H0zm0 8h24v3H0z"
                      />
                    </svg>
                     
                     
                  </button>
                   
                </li>
              </ol>
               
               
              <div
                class="content"
              >
                <div
                  class="header-bar-content"
                >
                  <div
                    class="header-label"
                  >
                    Review
                  </div>
                   
                  <div
                    class="header-title"
                  />
                </div>
                 
                <div
                  class="floating-toolbars-wrapper"
                >
                  <div
                    class="floating-toolbars"
                  >
                    
                     
                    <div
                      class="flex-break"
                    />
                    
                    
                     
                    <div
                      class="flex-break"
                    />
                    
                    
                     
                    
                  </div>
                </div>
              </div>
            </header>
             
            <aside>
              <ol
                class="end"
              >
                 
              </ol>
               
            </aside>
          </div>
        </div>
      </div>
       
      <main
        aria-labelledby="a11y-main"
        id="test-main"
        role="main"
        tabindex="0"
      >
        <div
          class="scroll-first-child"
        />
         
        <h2
          class="visually-hidden"
          id="a11y-main"
          tabindex="-1"
        />
         
        <div
          class="qti-item-container"
        >
          <div
            class="tabgroup"
          >
             
            <div
              class="scrollbox"
            >
              <ul
                role="tablist"
              >
                <li
                  role="presentation"
                >
                  <button
                    aria-current="true"
                    aria-selected="true"
                    disabled=""
                    role="tab"
                  >
                     
                    Question
                     
                  </button>
                   
                </li>
              </ul>
              <iframe
                aria-hidden="true"
                src="about:blank"
                style="display: block; position: absolute; top: 0; left: 0; width: 100%; height: 100%; overflow: hidden; border: 0; opacity: 0; pointer-events: none; z-index: -1;"
                tabindex="-1"
              />
            </div>
             
          </div>
           
           
           
          <div
            aria-hidden="true"
            class="item-content-container hidden-item-container"
          />
        </div>
         
        <div
          class="transition-wrapper"
        >
          <div
            class="transition"
          >
            <div
              aria-live="assertive"
              class="loading-wrapper small"
              role="alert"
            >
              <div
                class="loading"
              />
               
              <div
                class="content"
              >
                <p
                  class="text"
                >
                  loading
                </p>
              </div>
            </div>
             
            <p
              style="animation: __svelte_2884083938_0 500ms linear 4500ms 1 both;"
            >
              Please wait a little longer while your content loads
            </p>
          </div>
        </div>
         
        <div
          class="scroll-last-child"
        />
      </main>
       
      <nav
        aria-hidden="true"
        class="bottom-bar"
        id="test-navigation"
      >
        <h2
          class="visually-hidden"
        >
          Test Navigation
        </h2>
      </nav>
       
      <div
        aria-hidden="true"
        class="overlay"
      >
        <header
          role="none"
        >
          <div
            slot="header"
          />
        </header>
         
        <div
          aria-labelledby="a11y-overlay"
          class="overlay-content"
          role="main"
        >
          <div
            class="scroll-first-child"
          />
           
          <div
            slot="content"
          />
           
          <div
            class="scroll-last-child"
          />
        </div>
         
        <footer>
          <div
            slot="footer"
          />
        </footer>
      </div>
    </div>
     
    <div
      class="panel close-initial inverted-color"
      id="tao-panel-123"
    >
      <div
        class="drawer start inverted"
      >
        <div
          class="header"
        >
          <div
            class="icon-wrapper"
          >
            <button
              aria-label="Close Panel"
              class="icon-bar-btn actionable base-16 inverted"
              title="Close Panel"
            >
              <svg
                aria-hidden="false"
                class="icon medium"
                viewBox="0 0 16 16"
              >
                <title>
                  Remove icon
                </title>
                <path
                  d="M1 0l7 7 7-7 1 1-7 7 7 7-1 1-7-7-7 7-1-1 7-7-7-7 1-1z"
                />
              </svg>
               
               
            </button>
          </div>
           
        </div>
         
        <div
          class="drawer-content"
        >
          <div
            class="panel-content"
          />
        </div>
      </div>
    </div>
  </div>
</body>
`;
